--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,5 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.2'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:gridlayout-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
 }
