--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <application
         android:icon="@drawable/alppilogo"
         android:label="@string/app_name"
-		android:allowBackup="false">
+		android:allowBackup="false"
+        android:theme="@style/AppBaseTheme">
         <activity
             android:label="@string/app_name"
             android:name=".MainActivity" >
