--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     android:versionCode="1"
     android:versionName="@string/appversion" >
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
     <uses-sdk 
         android:minSdkVersion="8" 
         android:targetSdkVersion="21" />
@@ -91,6 +94,15 @@
             <intent-filter >
                 <action android:name="com.bettehem.virkiaalppifreestyle.TIEDOT"/>
 				<category android:name="android.intent.category.MULTIWINDOW_LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".ViestiRuutu">
+            <intent-filter >
+                <action android:name="com.bettehem.virkiaalppifreestyle.VIESTIRUUTU"/>
+                <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
